--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "velocity-animate": "^1.5.0",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
-    "vuex": "^2.2.1"
+    "vuex": "^2.2.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
