--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,10 @@
     ["env", { "modules": false }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": [
+    "transform-runtime",
+    "babel-plugin-transform-flow-strip-types"
+  ],
   "comments": false,
   "env": {
     "test": {
