--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.2.1",
+    "babel-preset-power-assert": "^1.0.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
@@ -46,7 +47,6 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
-    "json-loader": "^0.5.4",
     "karma": "^1.6.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
