--- a/circle.yml
+++ b/circle.yml
@@ -4,12 +4,18 @@ machine:
     version: 6.10.2
   post:
     - curl -o- -L https://yarnpkg.com/install.sh | bash
+general:
+  branches:
+    ignore:
+      - docs
 deployment:
   publish:
     branch: master
     commands:
       - yarn run build
       - cp -f -R dist docs
-      - git add .
+      - git config --global user.name  "CircleCI"
+      - git config --global user.email "circleci@gh-pages.com"
+      - git add docs
       - git commit -m 'build GitHubPaged on circle ci'
-      - git push origin master
+      - git push origin master -f
