--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "type": "flow",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+    "test": "yarn run unit && yarn run type"
   },
   "dependencies": {
     "lodash": "^4.17.4",
