[fix] circle ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,29 +11,23 @@ jobs:
           LC_ALL: C.UTF-8
           LANGUAGE: ja_JP.UTF-8
           DEPLOY_BRANCH: master
-
     steps:
       - checkout
-
       - run:
         name: update-yarn
-        command: 'sudo yarn install -g yarn@latest'
-
+        command: yarn install -g yarn@latest
       - restore_cache:
         name: Restore Yarn Package Cache
         keys:
           - yarn-packages-{{ checksum "yarn.lock" }}
-
       - run:
         name: Install Dependencies
         command: yarn install --frozen-lockfile
-
       - save_cache:
         name: Save Yarn Package Cache
         key: yarn-packages-{{ checksum "yarn.lock" }}
         paths:
           - ~/.cache/yarn
-      
       - run:
         name: Deploy development branch to master
         command: |
