--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,47 @@
 version: 2
 jobs:
-  build:
-    working_directory: ~/vue-youtube-search
-    docker:
-        - image: circleci/node:8.11.2
-    steps:
-      - checkout
-      - run:
-          name: update-yarn
-          command: yarn global add yarn@latest
-      - restore_cache:
-          name: Restore Yarn Package Cache
-          keys:
-            - yarn-packages-{{ checksum "yarn.lock" }}
-      - run:
-          name: Install Dependencies
-          command: yarn install --frozen-lockfile
-      - save_cache:
-          name: Save Yarn Package Cache
-          key: yarn-packages-{{ checksum "yarn.lock" }}
-          paths:
-            - ~/.cache/yarn
-      - run:
-          name: Deploy development branch to master
-          command: |
-            chmod +x deploy.sh
-            ./deploy.sh
+    build:
+        working_directory: ~/vue-youtube-search
+        docker:
+            - image: circleci/node:8.11.2
+        steps:
+            - checkout
+            - run:
+                name: update-yarn
+                command: yarn global add yarn@latest
+            - restore_cache:
+                name: Restore Yarn Package Cache
+                keys:
+                    - yarn-packages-{{ checksum "yarn.lock" }}
+            - run:
+                name: Install Dependencies
+                command: yarn install --frozen-lockfile
+            - save_cache:
+                name: Save Yarn Package Cache
+                key: yarn-packages-{{ checksum "yarn.lock" }}
+                paths:
+                    - ~/.cache/yarn
+            - run:
+                name: Deploy development branch to master
+                command: |
+                    chmod +x deploy.sh
+                    ./deploy.sh
+    
+    test:
+        working_directory: ~/vue-youtube-search
+        docker:
+            - image: circleci/node:8.11.2
+        steps:
+            - checkout
+            - run:
+                name: unit test
+                command: yarn run test:unit
+
+workflows:
+    version: 2
+    build_and_test:
+        jobs:
+            - build
+            - test: 
+                requires:
+                    - build
