--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,27 +21,39 @@ jobs:
                 key: yarn-packages-{{ checksum "yarn.lock" }}
                 paths:
                     - ~/.cache/yarn
-            - run:
-                name: Deploy development branch to master
-                command: |
-                    chmod +x deploy.sh
-                    ./deploy.sh
-    
     test:
         working_directory: ~/vue-youtube-search
         docker:
             - image: circleci/node:8.11.2
         steps:
             - checkout
+            - restore_cache:
+                name: Restore Yarn Package Cache
+                keys:
+                    - yarn-packages-{{ checksum "yarn.lock" }}
             - run:
                 name: unit test
                 command: yarn run test:unit
-
+    deploy:
+        working_directory: ~/vue-youtube-search
+        docker:
+            - image: circleci/node:8.11.2
+        steps:
+            - checkout
+            - run:
+                name: Deploy development branch to master
+                command: |
+                    chmod +x deploy.sh
+                    ./deploy.sh
 workflows:
     version: 2
-    build_and_test:
+    build_and_test_and_deploy:
         jobs:
             - build
             - test: 
                 requires:
                     - build
+            - deploy:
+                requires:
+                    - build
+                    - test
