[fix] circleci deploy job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,13 @@ jobs:
             - image: circleci/node:8.11.2
         steps:
             - checkout
+            - restore_cache:
+                name: Restore Yarn Package Cache
+                keys:
+                    - yarn-packages-{{ checksum "yarn.lock" }}
+            - run:
+                name: Install Dependencies
+                command: yarn install --frozen-lockfile
             - run:
                 name: Deploy development branch to master
                 command: |
