--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "test:unit": "jest --clearCache && vue-cli-service test:unit"
   },
   "dependencies": {
-    "lodash": "4.17.13",
-    "sass-loader": "7.3.1",
-    "vue": "2.6.8",
-    "vue-router": "3.0.2",
-    "vuex": "3.1.0",
-    "whatwg-fetch": "3.0.0"
+    "lodash": "^4.17.13",
+    "sass-loader": "^7.3.1",
+    "vue": "^2.6.8",
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.11.0",
-    "@vue/cli-plugin-eslint": "3.11.0",
-    "@vue/cli-plugin-unit-jest": "3.11.0",
-    "@vue/cli-service": "3.11.0",
-    "@vue/test-utils": "1.0.0-beta.29",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "24.9.0",
-    "eslint": "5.16.0",
-    "eslint-plugin-vue": "5.2.2",
-    "node-sass": "4.12.0",
-    "vue-template-compiler": "2.6.8"
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-plugin-unit-jest": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.9.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.2.2",
+    "node-sass": "^4.12.0",
+    "vue-template-compiler": "^2.6.8"
   },
   "eslintConfig": {
     "root": true,
