--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "vue-youtube-search",
   "version": "0.1.0",
+  
   "private": true,
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
